--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "tsx": "^4.19.4"
   },
   "dependencies": {
+    "@fast-csv/format": "^5.0.2",
     "@fastify/cors": "^11.0.1",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
