--- a/server/.env.example
+++ b/server/.env.example
@@ -1,10 +1,22 @@
+#REBRANDLY API 
+API_TOKEN=
+API_URL=
+
 # DB
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
 DB_HOST=
 DB_PORT=
-DATABASE_URL=
+DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+
+
+# CLOUDFLARE R2
+CLOUDFLARE_R2_ACCESS_KEY=
+CLOUDFLARE_R2_SECRET_KEY=
+CLOUDFLARE_R2_ENDPOINT=
+CLOUDFLARE_R2_BUCKET_NAME=
+CLOUDFLARE_R2_PUBLIC_BASE_URL=
 
 
 # APP
