--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "studio": "drizzle-kit studio",
+    "db:studio": "drizzle-kit studio",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
     "build": "tsup src/index.ts --dts",
@@ -27,6 +27,8 @@
     "tsx": "^4.19.4"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.830.0",
+    "@aws-sdk/s3-request-presigner": "^3.830.0",
     "@fast-csv/format": "^5.0.2",
     "@fastify/cors": "^11.0.1",
     "@fastify/swagger": "^9.5.1",
