--- a/server/.env.example
+++ b/server/.env.example
@@ -12,15 +12,13 @@ DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_N
 
 
 # CLOUDFLARE R2
-CLOUDFLARE_R2_ACCESS_KEY=
-CLOUDFLARE_R2_SECRET_KEY=
-CLOUDFLARE_R2_ENDPOINT=
-CLOUDFLARE_R2_BUCKET_NAME=
-CLOUDFLARE_R2_PUBLIC_BASE_URL=
-
+CLOUDFLARE_ACCESS_KEY_ID=
+CLOUDFLARE_SECRET_ACCESS_KEY=
+CLOUDFLARE_PUBLIC_URL=
+CLOUDFLARE_BUCKET=
 
 # APP
-APP_PORT=
+PORT=
 APP_HOST=
 NODE_ENV=
 
