--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "@fastify/swagger-ui": "^5.2.3",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
+    "eslint-plugin-import": "^2.32.0",
     "fastify": "^5.3.3",
     "fastify-type-provider-zod": "^5.0.1",
     "pg": "^8.16.0",
