--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,3 @@
-#REBRANDLY API 
-API_TOKEN=
-API_URL=
-
 # DB
 DB_USER=
 DB_PASSWORD=
@@ -16,6 +12,7 @@ CLOUDFLARE_ACCESS_KEY_ID=
 CLOUDFLARE_SECRET_ACCESS_KEY=
 CLOUDFLARE_PUBLIC_URL=
 CLOUDFLARE_BUCKET=
+CLOUDFLARE_ENDPOINT=
 
 # APP
 PORT=
